Add PropsType change working menu by click.

--- a/src/locales/ru/ru.json
+++ b/src/locales/ru/ru.json
@@ -2,7 +2,7 @@
   "leftSideMenu": {
     "messages": "Сообщения",
     "menu": "Меню",
-    "product": "Товары",
+    "products": "Товары",
     "properties": "Настройки",
     "helps": "Помощь"
   }
