Create baseEntity and change locale for it.

--- a/src/locales/ru/ru.json
+++ b/src/locales/ru/ru.json
@@ -23,5 +23,22 @@
         "clearFilter": "Очистить"
       }
     }
+  },
+  "baseEntity": {
+    "id": "Идентификатор",
+    "name": "Название",
+    "comment": "Комментарий",
+    "updatedAt": "Обновлен в",
+    "createdAt": "Создан в",
+    "updatedBy": "Обновлен кем",
+    "createdBy": "Создан кем",
+    "errors": {
+      "min": "Минимальная длинна 2 символа",
+      "max": "Максимальная длинна 1000 символов",
+      "required": "Обязательное поле"
+    }
+  },
+  "brands": {
+
   }
 }
