Update project, add button fro approval win.

--- a/src/locales/ru/ru.json
+++ b/src/locales/ru/ru.json
@@ -38,21 +38,31 @@
         }
       },
       "approvals": {
+        "yes": "Да",
+        "cancel": "Отмена",
         "removeCheck": {
           "title": "Удаление",
-          "msg": "Вы действительно хотите удалить"
+          "msg": "Вы действительно хотите удалить",
+          "yes": "Да, удалить",
+          "cancel": "Отмена"
         },
         "removeFilter": {
           "title": "Удаление по фильтру",
-          "msg": "Вы действительно хотите удалить"
+          "msg": "Вы действительно хотите удалить",
+          "yes": "Да, удалить",
+          "cancel": "Отмена"
         },
         "unloadCheck": {
           "title": "Выгрузка",
-          "msg": "Вы хотите выгрузить"
+          "msg": "Вы хотите выгрузить",
+          "yes": "Да, выгрузить",
+          "cancel": "Отмена"
         },
         "unloadFilter": {
           "title": "Выгрузка по фильтру",
-          "msg": "Вы хотите выгрузить"
+          "msg": "Вы хотите выгрузить",
+          "yes": "Да, выгрузить",
+          "cancel": "Отмена"
         }
       },
       "other": {
