Update work with checked menu. Add new words to vocabulary.

--- a/src/locales/ru/ru.json
+++ b/src/locales/ru/ru.json
@@ -82,6 +82,11 @@
       "min": "Минимальная длинна 2 символа",
       "max": "Максимальная длинна 1000 символов",
       "required": "Обязательное поле"
+    },
+    "plurals": {
+      "first": "объектов",
+      "second": "объект",
+      "third": "объекта"
     }
   },
   "brands": {
