--- a/src/locales/ru/ru.json
+++ b/src/locales/ru/ru.json
@@ -66,7 +66,8 @@
         }
       },
       "other": {
-        "checkedText": "Выбрано"
+        "checkedText": "Выбрано",
+        "disableChecked": "Отмена выбраного"
       }
     }
   },
