Last updated view data grid.

--- a/src/locales/ru/ru.json
+++ b/src/locales/ru/ru.json
@@ -34,7 +34,9 @@
         "buttonYesDel": "Да, удалить",
 
         "tooltips": {
-
+          "buttonUnload": "Выгрузить",
+          "buttonImport": "Импорт",
+          "gridColumnAdd": "Добавить столбец"
         }
       },
       "approvals": {
