Change base method API.

--- a/src/locales/ru/ru.json
+++ b/src/locales/ru/ru.json
@@ -114,5 +114,24 @@
       "second": "бренд",
       "third": "бренда"
     }
+  },
+  "services": {
+    "base": {
+      "consts": {
+        "obj": "объект",
+        "objecta": "объекта",
+        "objectov": "объектов",
+        "objects": "объекты"
+      },
+      "errors":{
+        "E100000":"Сетевая ошибка, проверте настройки CORS или статус ответа"
+      }
+    },
+    "brands": {
+      "obj":"бренд",
+      "objecta":"бренда",
+      "objectov":"брендов",
+      "objects":"бренды"
+    }
   }
 }
