End rebuild services. Create base service and first implementation - BrandService.

--- a/src/locales/ru/ru.json
+++ b/src/locales/ru/ru.json
@@ -124,7 +124,23 @@
         "objects": "объекты"
       },
       "errors":{
-        "E100000":"Сетевая ошибка, проверте настройки CORS или статус ответа"
+        "server": "Ошибка на сервере",
+        "code": "Ошибка в коде",
+        "network": "Сетевая ошибка",
+        "list": "Ошибка получения списка",
+        "item": "Ошибка получения",
+        "deleteItem": "Ошибка удаления",
+        "deleteList": "Ошибка удаления выбранных",
+        "deleteFilter": "Ошибка удаления по фильтру",
+        "create": "Ошибка создания",
+        "update": "Ошибка сохранения"
+      },
+      "successes": {
+        "deleteItem": "${constName} c ид: ${id} - удален",
+        "deleteList": "Выбранные ${constName} удалены",
+        "deleteFilter": "Выбранные ${constName} удалены",
+        "create": "создан",
+        "update": "обновлен"
       }
     },
     "brands": {
