Bugfix route, login, rebuild main section, rebuild change page and sorter.

--- a/src/locales/ru/ru.json
+++ b/src/locales/ru/ru.json
@@ -124,7 +124,8 @@
         "objects": "объекты"
       },
       "errors":{
-        "server": "Ошибка на сервере",
+        "server": "Ошибка на сервере, обратитесь к администратору",
+        "pathNotFound": "Ошибка на сервере, не найлен такой путь или сервер не доступен",
         "code": "Ошибка в коде",
         "network": "Сетевая ошибка",
         "list": "Ошибка получения списка",
@@ -142,6 +143,10 @@
         "create": "создан",
         "update": "обновлен"
       }
+    },
+    "auth": {
+      "errorLoginPass": "Неправильно логин или пароль",
+      "errorAuth": "Ошибка авторизации"
     },
     "brands": {
       "obj":"бренд",
