Some fix login form.

--- a/src/locales/ru/ru.json
+++ b/src/locales/ru/ru.json
@@ -1,6 +1,6 @@
 {
   "loginLayout": {
-    "buttonLogIn": "ВОЙТИ",
+    "buttonLogIn": "войти",
     "username": "Логин",
     "password": "Пароль",
     "enter": "Вход",
