--- a/src/locales/ru/ru.json
+++ b/src/locales/ru/ru.json
@@ -34,6 +34,10 @@
     "main": {
       "buttons": {
         "buttonAdd": "Добавить",
+        "buttonEdit": "Редактирование",
+        "buttonPreview": "Просмотр",
+        "buttonClone": "Клонировать",
+        "buttonExportResult": "Результат экспорта",
         "buttonButch": "Пакетная обработка",
         "buttonSave": "Сохранить",
         "buttonCancel": "Отменить",
@@ -113,6 +117,11 @@
       "first": "брендов",
       "second": "бренд",
       "third": "бренда"
+    }
+  },
+  "catalog": {
+    "breadcrumbs": {
+      "name": "Каталог"
     }
   },
   "services": {
