--- a/src/locales/ru/ru.json
+++ b/src/locales/ru/ru.json
@@ -86,6 +86,25 @@
         "edit": "Редактировать",
         "add": "Добавить"
       }
+    },
+    "previewProduct" : {
+      "article": "Артикул",
+      "productId": "Продукт ID",
+      "productCode": "Продукт CODE",
+      "propertyProduct": "СВОЙСТВА ТОВАРА",
+      "propertyContent": "СВОЙСТВА КОНТЕНТА",
+      "status": "Статус",
+      "typeProduct": "Тип товара",
+      "country": "Страна производитель",
+      "vendor": "Вендор",
+      "brand": "Бренд",
+      "family": "Семейство",
+      "series": "Серия",
+      "model": "Модель",
+      "barcodes": "Штрихкоды",
+      "categories": "Категории",
+      "accessories": "АКСЕССУАРЫ",
+      "productCharacteristics": "ХАРАКТЕРИСТИКИ ТОВАРА"
     }
   },
   "baseEntity": {
@@ -122,6 +141,11 @@
   "catalog": {
     "breadcrumbs": {
       "name": "Каталог"
+    }
+  },
+  "catalogPreview": {
+    "breadcrumbs": {
+      "name": "Просмотр товара"
     }
   },
   "services": {
