--- a/src/locales/ru/ru.json
+++ b/src/locales/ru/ru.json
@@ -218,9 +218,6 @@
     "createdAt": "Создан в",
     "updatedBy": "Обновлен кем",
     "createdBy": "Создан кем",
-    "layout": "Макет",
-    "count": "Количество продуктов",
-    "presenceAttributes": "Наличие аттрибутов",
     "errors": {
       "min": "Минимальная длинна 2 символа",
       "max": "Максимальная длинна 1000 символов",
@@ -231,6 +228,11 @@
       "second": "объект",
       "third": "объекта"
     }
+  },
+  "categories": {
+    "layout": "Макет",
+    "count": "Количество продуктов",
+    "presenceAttributes": "Наличие аттрибутов"
   },
   "brands": {
     "breadcrumbs": {
