Bugfix in data grid, add action column base column.

--- a/src/locales/ru/ru.json
+++ b/src/locales/ru/ru.json
@@ -391,6 +391,9 @@
       "first": "групп значений",
       "second": "группа значений",
       "third": "группы значений"
+    },
+    "fields": {
+      "showSubs": "Значения группы"
     }
   },
   "substitutions": {
