New routes, Bugfixes, new languages.

--- a/src/locales/ru/ru.json
+++ b/src/locales/ru/ru.json
@@ -435,7 +435,35 @@
       "third": "роли"
     }
   },
+  "units": {
+    "breadcrumbs": {
+      "name": "Единицы измерения"
+    },
+    "plurals": {
+      "first": "Единиц изм.",
+      "second": "Единица изм.",
+      "third": "Единицы изм."
+    },
+    "fields": {
+      "showMapping": "Показать маппинг"
+    }
+  },
+  "unitMappings": {
+    "breadcrumbs": {
+      "name": "Маппинги единиц изм."
+    },
+    "plurals": {
+      "first": "Маппингов един. изм.",
+      "second": "Маппинг един. изм.",
+      "third": "Маппинга един. изм."
+    },
+    "fields": {
+      "unitFrom": "C юнита",
+      "unitTo": "В юнит",
+      "ratio": "Коэффициент"
 
+    }
+  },
 
 
 
@@ -532,6 +560,31 @@
       "objecta":"значения",
       "objectov":"значений",
       "objects":"значений"
+    },
+
+    "departments": {
+      "obj":"департамент",
+      "objecta":"департамента",
+      "objectov":"департаментов",
+      "objects":"департаменты"
+    },
+    "roles": {
+      "obj":"роль",
+      "objecta":"роли",
+      "objectov":"ролей",
+      "objects":"роли"
+    },
+    "units": {
+      "obj": "единица измерения",
+      "objecta": "единицы измерения",
+      "objectov": "единиц измерения",
+      "objects": "единицы измерения"
+    },
+    "unitMappings": {
+      "obj":"маппинг един. измер.",
+      "objecta":"маппинг един. измер.",
+      "objectov":"маппингов един. измер.",
+      "objects":"маппинги един. измер."
     }
   }
 }
