--- a/src/locales/ru/ru.json
+++ b/src/locales/ru/ru.json
@@ -486,7 +486,7 @@
     "breadcrumbs": {
       "name": "Экспортные шаблоны"
     },
-    "plurals": {і
+    "plurals": {
       "first": "экспортных шаблонов",
       "second": "экспортный шаблон",
       "third": "экспортных шаблонов"
