--- a/src/locales/ru/ru.json
+++ b/src/locales/ru/ru.json
@@ -245,6 +245,24 @@
       "third": "бренда"
     }
   },
+  "cat2Attrs" : {
+    "fields": {
+      "create": "Создать/Перенести в группу",
+      "edit": "Редактировать",
+      "attribute": "Аттрибут",
+      "required": {
+        "name": "Обязательный",
+        "yes": "Да",
+        "no": "Нет"
+      },
+      "key": {
+        "name": "Ключевой",
+        "yes": "Да",
+        "no": "Нет"
+      },
+      "weight": "Вес"
+    }
+  },
   "manufacturers": {
     "breadcrumbs": {
       "name": "Производители"
