--- a/src/locales/ru/ru.json
+++ b/src/locales/ru/ru.json
@@ -250,6 +250,7 @@
       "create": "Создать/Перенести в группу",
       "edit": "Редактировать",
       "attribute": "Аттрибут",
+      "groupName": "Группа",
       "required": {
         "name": "Обязательный",
         "yes": "Да",
